@@ -75,8 +75,7 @@ namespace bt
 			if (!fptr.eof())
 			{
 				// read the chunk
-				Uint32 size = i == num_chunks - 1 && tor.getFileLength() % tor.getChunkSize() > 0 ?
-						tor.getFileLength() % tor.getChunkSize() : (Uint32)tor.getChunkSize();
+				Uint32 size = i == num_chunks - 1 ? tor.getLastChunkSize() : tor.getChunkSize();
 				
 				fptr.seek(File::BEGIN,(Int64)i*tor.getChunkSize());
 				fptr.read(buf,size);
