@@ -133,7 +133,10 @@ namespace bt
 		Uint32 getNumChunks() const {return hash_pieces.size();}
 		
 		/// Get the size of a chunk.
-		Uint64 getChunkSize() const {return piece_length;}
+		Uint64 getChunkSize() const {return chunk_size;}
+		
+		/// Get the size of the last chunk
+		Uint64 getLastChunkSize() const {return last_chunk_size;}
 		
 		/// Get the info_hash.
 		const SHA1Hash & getInfoHash() const {return info_hash;}
@@ -142,7 +145,7 @@ namespace bt
 		const PeerID & getPeerID() const {return peer_id;}
 		
 		/// Get the file size in number of bytes.
-		Uint64 getFileLength() const {return file_length;}
+		Uint64 getTotalSize() const {return total_size;}
 		
 		/// Get the suggested name.
 		QString getNameSuggestion() const {return name_suggestion;}
@@ -257,8 +260,9 @@ namespace bt
 		TrackerTier* trackers;
 		QString name_suggestion;
 		QByteArray unencoded_name;
-		Uint64 piece_length;
-		Uint64 file_length;
+		Uint64 chunk_size;
+		Uint64 last_chunk_size;
+		Uint64 total_size;
 		SHA1Hash info_hash;
 		PeerID peer_id;
 		QVector<SHA1Hash> hash_pieces;
